--- a/templates/index.html
+++ b/templates/index.html
@@ -1,56 +1,21 @@
-<!doctype html>
-<html>
+{% extends 'base.html' %}
+{% block content %}
+<h2> LOGIN </h2>
 
-<head>
-  <title>Bootstrap Tables Example</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-</head>
+<form action='/login_confirm' method="GET" name='login'>
+<table>
+  <tr>
+    <td>Username</td>
+    <td> <input type="username" name="username"></td></tr>
+  <tr>
+    <td>Password</td>
+    <td><input type="password" name="password"></td>
+  </tr>
+</table>
+  
+  <input type="submit" value="login">
+</form>
+<button><a href="/register">New User?</a></button>
 
-<body>
 
-<div class="container">
-
-  <div class="pb-2 mt-4 mb-2 border-bottom">
-    <div class="col">
-      <h1>Tables Example</h1>
-      <p class="lead">It's easy to make attractive tables.</p>
-    </div>
-  </div>
-
-  <table class="table table-hover table-striped">
-    <thead>
-    <tr>
-      <th>Name</th>
-      <th>Birthplace</th>
-      <th>Favorite Color</th>
-    </tr>
-    </thead>
-    <tr>
-      <td>Barbara</td>
-      <td>Baltimore</td>
-      <td>Orange</td>
-    </tr>
-    <tr>
-      <td>Miriam</td>
-      <td>Mexico City</td>
-      <td>Blue</td>
-    </tr>
-    <tr>
-      <td>Balloonicorn</td>
-      <td>Narnia</td>
-      <td>Rainbows</td>
-    </tr>
-  </table>
-
-</div>
-
-<!-- We don't actually use any JS-based components here, but
-     we'll include the JS as an example -->
-
-<script src="http://code.jquery.com/jquery.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
-
-</body>
-
-</html>
+{% endblock %}
