--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,9 @@
 
 </head>
 <nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgyZgRZEIdY4flzsu7Q9ovPsgjGi7tsKrRFC5G_vwNmK7qO3p5" width="30" height="30" class="d-inline-block align-top" alt="">
+  </a>
   <a class="navbar-brand" href="#">  The Cluv </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
