--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
   
   <input type="submit" value="login">
 </form>
-<button><a href="/register">New User?</a></button>
+<button class="btn btn-primary btn-sm"><a href="/register">New User?</a></button>
 
 
 {% endblock %}
