--- a/templates/register.html
+++ b/templates/register.html
@@ -2,12 +2,15 @@
 {% block content %}
 <h2> Register </h2>
 
+<div class="container">
+
 <form action="/register_confirm" method="POST" name="register">
 <table>
 	<tr>
     	<td>First Name</td>
     	<td> <input type="fname" 
-    			name="fname" 
+    			name="fname"
+                class="form-control" 
     			required>
     	</td>
 	</tr>
@@ -15,7 +18,8 @@
 	<tr>
     	<td>Last Name</td>
     	<td> <input type="lname" 
-    				name="lname" 
+    				name="lname"
+                    class="form-control" 
     				required>
     	</td>
 	</tr>
@@ -23,7 +27,8 @@
 	<tr>
     	<td>Zipcode</td>
     	<td> <input type="zipcode" 
-    				name="zipcode" 
+    				name="zipcode"
+                    class="form-control" 
     				required>
     	</td>
 	</tr>
@@ -31,7 +36,8 @@
 	<tr>
     	<td>Username</td>
     	<td> <input type="username" 
-    				name="username" 
+    				name="username"
+                    class="form-control" 
     				required>
     	</td>
 	</tr>
@@ -39,7 +45,8 @@
 	<tr>
     	<td>Email</td>
     	<td> <input type="email" 
-    				name="email" 
+    				name="email"
+                    class="form-control" 
     				required>
     	</td>
 	
@@ -48,30 +55,32 @@
 		<tr>
     	<td>Image</td>
     	<td> <input type="url" 
-    				name="user_img">
+    				name="user_img"
+                    class="form-control">
     	</td>
 	</tr>
 	
 	<tr>
-    	<td>Password</td>
-    	<td> <input type="password" 
+    	<td><label class="col-sm-2 col-form-label">Password</label></td>
+    	<td> <input type="text" 
     				name="password" 
+                    class="form-control"
     				required>
     	</td>
 	</tr>
 
 	<tr>
-    	<td>Confirm Password</td>
+    	<td><label class="col-sm-2 col-form-label">Confirm Password</label></td>
     	<td> <input type="password" 
-    				name="password_2" 
+    				name="password_2"
+                    class="form-control" 
     				required>
     	</td>
 	</tr>
 </table>
   
-  <input type="submit" value="Register">
+  <input type="submit" value="Register" class="btn btn-primary btn-sm">
 </form>
 
-
-
+</div>
 {% endblock %}
