--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2> LOGIN </h2>
+<div id= class="col-8"><h2> LOGIN </h2></div>
 
 <form action='/login' method="POST" name='login'>
 <table>
