--- a/static/thecluv.css
+++ b/static/thecluv.css
@@ -18,10 +18,6 @@
     text-align: center;
 }
 
-div.container {
-	max-width: 720px;
-}
-
 input.btn-primary {
 	width: 150px;
   	text-align: center;
@@ -30,4 +26,25 @@ input.btn-primary {
 
 input {
 	text-align: center;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.left-nav-bar{
+	flex: 0 0 210px;
 }
