--- a/templates/article_add.html
+++ b/templates/article_add.html
@@ -4,104 +4,114 @@
 
 <div class="row justify-content-center">
 <form action="/article_add_confirm" enctype="multipart/form-data" method="POST" name="article_add">
-<table>
-	<tr>
-    	<td>Type</td>
-    	<td> <select name = "type_id" class="custom-select">
-    		 <option selected>Choose One</option>
+  
+	<div class="form-group">
+	<label for="type">Type</label>
+    	<select name = "type_id" class="custom-select">
+    	<option selected>Choose One</option>
     	{% for type in article_type %}
     	<option value="{{type.type_id}}">{{type.name}}</option>
     	{% endfor %}
     	</select>
-    	</td>
-	</tr>
+	</div>
 
-	<tr>
-    	<td>Images</td>
-    	<td> <input type="file" 
-    				name="image" 
-    				required>
-			 <input type="url" 
-    				name="image_2">
-    		 <input type="url" 
-    				name="image_3">
-			<input type="url" 
-    				name="image_4">
-    	</td>
-	</tr>
-	<tr>
-    	<td>Size</td>
-    	<td> <input type="size" 
-    				name="size" 
-    				required>
-    	</td>
-	</tr>
+	<div class="form-group">
+    <label for="images">Images</label>
+		<input type="file" 
+			   name="image"
+			   class="form-control-file" 
+		       required>
+		<input type="file" 
+			   name="image_2"
+			   class="form-control-file">
+		<input type="file" 
+			   name="image_3"
+			   class="form-control-file">
+		<input type="file" 
+			   name="image_4"
+			   class="form-control-file">
+	</div>
+    
+    <div class="form-group">	
+    <label for="size">Size</label>
+		<input type="size" 
+    		   name="size"
+    		   class="form-control" 
+    		   required>
+	</div>
 
-	<tr>
-    	<td>Color</td>
-    	<td> <input type="text" 
-    				name="color" 
-    				required>
-    	</td>
-	</tr>
+	<div class="form-group">
+    <label for="color">Color</label>
+		<input type="text" 
+    		   name="color"
+    		   class="form-control"
+    		   required>
+    </div>		   
 
-	<tr>
-    	<td>Material</td>
-    	<td> <input type="material" 
-    				name="material" 
-    				required>
-    	</td>
-	</tr>
+	<div class="form-group">
+    <label for="material">Material</label>
+		<input type="material" 
+    		   name="material"
+    		   class="form-control"
+    		   required>
+    </div>
 
-	<tr>
-    	<td>Notes</td>
-    	<td> <textarea class="form-control" 
-    				   rows="5" 
-    				   name="notes">
-
-    		</textarea>
-    	</td>
-	
-	</tr>
-
-		<tr>
-    	<td>Private</td>
-    	<td> <input type="radio" 
-    				name="is_private"> Yes
+	<div class="form-group">
+    <label for="notes">Notes</label>
+		<textarea class="form-control"
+			   id="exampleFormControlTextarea1" 
+			   rows="3" 
+    		   name="notes">
+		</textarea>
+	</div>
+	<fieldset class="form-group">
+    <div class="row">
+	<legend class="col-form-label col-sm-2 pt-0">Private</legend>
+		<input type="radio" 
+    		   name="is_private"> Yes
     	
-    	    <input type="radio" 
-    				name="is_private"> No
-    	</td>
-	</tr>
-	
-	</tr>
+		<input type="radio" 
+    		   name="is_private"> No
+    </div>
+	</fieldset>
 
-		<tr>
-    	<td>Loanable</td>
-    	<td> <input type="radio" 
-    				name="is_loanable"> Yes
+	<div class="form-group">
+    <label for="loanable">Loanable</label>
+		<input type="radio"
+			   class="form-check-input"
+			   id="gridRadios1" 
+    		   name="is_loanable"
+    		   value="True"> Yes
     	
-    	    <input type="radio" 
-    				name="is_loanable"> No
-    	</td>
-	</tr>
+		<input type="radio"
+			   class="form-check-input"
+			   id="gridRadios1" 
+    		   name="is_loanable"
+    		   value="False"> No
+	</div>
 
-	</tr>
-
-		<tr>
-    	<td>Giveaway</td>
-    	<td> <input type="radio" 
-    				name="is_giveaway"> Yes
+	<div class="form-group">
+    <label for="giveaway">Giveaway</label>
+		<input type="radio"
+			   class="form-check-input"
+			   id="gridRadios1" 
+    		   name="is_giveaway"
+    		   value="True"> Yes
     	
-    	    <input type="radio" 
-    				name="is_giveaway"> No
-    	</td>
-	</tr>
+		<input type="radio"
+			   class="form-check-input"
+			   id="gridRadios1" 
+    		   name="is_giveaway"
+    		   value="False"> No
+    </div>
+   
+    <div class="col-auto">
+		<button type="submit" 
+			   class="btn btn-primary mb-2" 
+			   value="Add">Submit
+		</button>
+    </div>
 
-</table>
-
-  <br>
-  <input type="submit" value="Add" class="btn btn-primary btn-sm">
 </form>
 </div>
 
