--- a/templates/closet.html
+++ b/templates/closet.html
@@ -28,28 +28,19 @@
 <div class="row">
 
 <!-- for article in request  -->
+{% for item in user_closet %}
+  
   <div class="col-md-4">
-    <a href="https://s3-us-west-1.amazonaws.com/thecluv/078dc731-edf3-483c-b0cd-8c79c60da451.png"><img src="https://s3-us-west-1.amazonaws.com/thecluv/078dc731-edf3-483c-b0cd-8c79c60da451.png" alt="Dress" style="width:100%">Hello</a>
+    <div class="item-list">
+      {% if item.images %}
+    <a href="{{item.images[0].img_url}}"><img src="{{item.images[0].img_url}}" alt="Snow" style="width:100%"></a>
+      {% endif %}
+    <p>{{item.type_value.name}} / {{item.size}}</p>
+    </div>
   </div>
-  <div class="col-md-4">
-    <img src="https://static01.nyt.com/images/2018/09/01/science/01TB-CATS/merlin_142294395_c2acf4d4-3e4a-4e31-a497-690116229738-articleLarge.jpg?quality=90&auto=webp" alt="Forest" style="width:100%">
-  </div>
-  <div class="col-md-4">
-    <img src="https://r.hswstatic.com/w_907/gif/tesla-cat.jpg" alt="Mountains" style="width:100%">
-  </div>
-
-  <div class="col-md-4">
-    <a href="https://images.pexels.com/photos/20787/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=350"><img src="https://images.pexels.com/photos/20787/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=350" alt="Snow" style="width:100%">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></a>
-  </div>
-  <div class="col-md-4">
-    <img src="https://static01.nyt.com/images/2018/09/01/science/01TB-CATS/merlin_142294395_c2acf4d4-3e4a-4e31-a497-690116229738-articleLarge.jpg?quality=90&auto=webp" alt="Forest" style="width:100%">
-  </div>
-  <div class="col-md-4">
-    <img src="https://r.hswstatic.com/w_907/gif/tesla-cat.jpg" alt="Mountains" style="width:100%">
-  </div>
-</div>
+  
+{% endfor %}
+</div> 
 
 </div>
 </div>
