Updated the registration form so that it uploads users img to s3

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,8 +2,9 @@
 {% block content %}
 <div>
 <div class="shadow p-3 mb-5 bg-white rounded">
+<div class="col-md-4">
 <img src="{{user_info.user_img}}" class="rounded mx-auto d-block" alt="{{user_info.user_img}}">
-
+</div>
 
 <h1 class="text-center">{{user_info.fname}} {{user_info.lname}}</h1>
 <p class="text-center">
