Started my sorting code

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
         <a class="nav-link" href="/my_closet">My Closet <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/my_closet">Closets</a>
+        <a class="nav-link" href="/closets">Closets</a>
       </li>
       	{% if session.get("current_user") %}
       <li class="nav-item">
