--- a/templates/closet.html
+++ b/templates/closet.html
@@ -41,7 +41,7 @@
   <div class="shadow p-3 mb-5 bg-white rounded">
     <div class="item-list">
       {% if item.images %}
-    <a href="{{item.images[0].img_url}}"><img src="{{item.images[0].img_url}}" alt="Snow" style="width:100%"></a>
+    <a href="article_details/{{item.article_id}}"><img src="{{item.images[0].img_url}}" alt="Snow" style="width:100%"></a>
       {% endif %}
     <div class="article-detail">
     <p class="text-center">{{item.type_value.name}} / {{item.size}}</p>
