--- a/templates/closet.html
+++ b/templates/closet.html
@@ -13,6 +13,11 @@
     <a class="nav-link active" href="/article_add">New Article</a>
   </li>
   </div>
+  <div class="side_bar">
+  <li class="nav-item">
+    <a class="nav-link active" href="{{page_name}}">Show All</a>
+  </li>
+  </div>
   <!-- <div class="side_bar">
   <li class="nav-item">
     <a class="nav-link active" href="/my_closet">My Closet</a>
