--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,7 @@
-<!doctype html>
-<html>
-<head>
+{% extends 'base2.html' %}
+{% block content %}
 
-	<title>Happy Clothes</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-	<link href="static/thecluv.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,700i|Sofia" rel="stylesheet">
-
-</head>
-<body class="login_page">
-<div class="text-center">
-	<img class="login_logo" src="static/logo_white.png">
-</div>
 <div class="row justify-content-md-center">
 <div class="col col-lg-4">
 <div class="login_box shadow rounded">
@@ -51,11 +36,4 @@
 </div>
 </div>
 </div>
-<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
-
-<!-- Bootstrap Js CDN -->
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-</body>
-</html>
+{% endblock %}
