--- a/templates/register.html
+++ b/templates/register.html
@@ -1,8 +1,16 @@
-{% extends 'base.html' %}
+{% extends 'base2.html' %}
 {% block content %}
-<h2> Register </h2>
+<div class="row justify-content-md-center">
+<div class="col col-lg-6">
+<div class="login_box shadow rounded">
+<div class="text-center">
+    <a class="small_link" href="/login">Already a user?</a>
+</div>
+<br>
+<div id= class="col-6"><h2> Register </h2></div>
+
 <div class="row justify-content-center">
-<div class="col-8">
+<div class="col-10">
 <div class="container">
 
 <form action="/register_confirm" enctype="multipart/form-data" method="POST" name="register">
@@ -10,41 +18,41 @@
 <div class="form-group">
 <label for="fname">First Name</label>
          <input type="fname" 
-    			name="fname"
+                name="fname"
                 class="form-control" 
-    			required>
+                required>
 </div>
 
 <div class="form-group">
 <label for="lname">Last Name</label>
              <input type="lname" 
-    				name="lname"
+                    name="lname"
                     class="form-control" 
-    				required>
+                    required>
 </div>
 
-<div class="form-group">   	
+<div class="form-group">    
 <label for="zipcode">Zipcode</label>
              <input type="zipcode" 
-    				name="zipcode"
+                    name="zipcode"
                     class="form-control" 
-    				required>
+                    required>
 </div>
 
 <div class="form-group">
 <label for="username">Username</label>
              <input type="username" 
-    				name="username"
+                    name="username"
                     class="form-control" 
-    				required>
+                    required>
 </div>
 
 <div class="form-group">
 <label for="email">Email</label>
              <input type="email" 
-    				name="email"
+                    name="email"
                     class="form-control" 
-    				required>
+                    required>
 </div>
 
 <div class="form-group">
@@ -65,12 +73,12 @@
 <div class="form-group">
 <label for="conf-password">Confirm Password</label>
              <input type="password" 
-    				name="password_2"
+                    name="password_2"
                     class="form-control" 
-    				required>
+                    required>
 </div>
 
-<div class="form-group">
+<div class="text-center">
     <button type="submit" 
            class="btn btn-primary btn-sm" 
            value="Register">Register
@@ -78,6 +86,10 @@
 </div>
 
 </form>
+</div>
+</div>
+</div>
+</div>
 </div>
 </div>
 {% endblock %}
