--- a/templates/article_details.html
+++ b/templates/article_details.html
@@ -1,61 +1,95 @@
 {% extends 'base.html' %}
 {% block content %}
+
 <div class="container">
-<div class="row">
-<div class="col col-md-2">
-<div class="row justify-content-md-center">
+  <div class="row">
+    <div class="col col-md-2">
+      <div class="row justify-content-md-center">
 
-<!-- for article in request  -->
-{% for item in current_article.images %}
-  <div class="item-list">
-  {% if current_article.images %}
-  <div  class="shadow p-3 mb-2 bg-white rounded">
-      <img src="{{item.img_url}}" style="width:100%">
-  </div>
-  {% endif %} 
-  </div>
-{% endfor %}
+      <!-- for article in request  -->
+      {% for item in current_article.images %}
+        <div class="item-list">
+        {% if current_article.images %}
+          <div  class="shadow p-3 mb-2 bg-white rounded">
+              <img src="{{item.img_url}}" style="width:100%">
+          </div>
+        {% endif %} 
+        </div>
+      {% endfor %}
 
+    </div> <!-- closes col col-md-2 -->
+  </div> <!-- row closes -->
+    <div class="col col-sm-6">
+      <img src="{{current_article.images[0].img_url}}" style="width:100%">
+    </div>
+    <div class="col col-md-4">
+        <p>
+        <b>item type | </b>{{current_article.type_value.name}}
+        <br>
+        <b>size | </b>{{current_article.size}}
+        <br>
+        <b>material | </b>{{current_article.material}}
+        <br>
+        <b>notes | </b>{{current_article.notes}}
+        </p>
+    {% if current_user == current_article.owner_id %}
+    <button type="submit" 
+           class="btn btn-primary mb-2" 
+           value="edit">Edit
+    </button>
+    <button type="submit" 
+           class="btn btn-primary mb-2" 
+           data-toggle="modal" 
+           data-target="#deleteModalCenter"
+           value="delete">Delete
+    </button>
+    {% endif %}
+    {% if current_article.is_loanable %}
+    <button type="submit" 
+           class="btn btn-primary mb-2" 
+           value="loan">Borrow
+    </button>
+    {% endif %}
+    {% if current_article.is_giveaway %}
+    <button type="submit" 
+           class="btn btn-primary mb-2" 
+           value="free">Free
+    </button>
+    {% endif %}
+
+    </div>
+  </div> <!-- closes row just -->
+</div> <!-- closes container -->
+
+<!-- Button trigger modal -->
+
+<!-- Modal -->
+<div class="modal fade" id="deleteModalCenter" tabindex="-1" role="dialog" aria-labelledby="deleteModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalCenterTitle">Delete Item</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Cancel">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this item?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-secondary">Delete</button>
+      </div>
+    </div>
+  </div>
 </div>
-</div>
-  <div class="col col-sm-6">
-    <img src="{{current_article.images[0].img_url}}" style="width:100%">
-  </div>
-  <div class="col col-md-4">
-      <p>
-      <b>item type | </b>{{current_article.type_value.name}}
-      <br>
-      <b>size | </b>{{current_article.size}}
-      <br>
-      <b>material | </b>{{current_article.material}}
-      <br>
-      <b>notes | </b>{{current_article.notes}}
-      </p>
-  {% if current_user == current_article.owner_id %}
-  <button type="submit" 
-         class="btn btn-primary mb-2" 
-         value="edit">Edit
-  </button>
-  <button type="submit" 
-         class="btn btn-primary mb-2" 
-         value="delete">Delete
-  </button>
-  {% endif %}
-  {% if current_article.is_loanable %}
-  <button type="submit" 
-         class="btn btn-primary mb-2" 
-         value="loan">Borrow
-  </button>
-  {% endif %}
-  {% if current_article.is_giveaway %}
-  <button type="submit" 
-         class="btn btn-primary mb-2" 
-         value="free">Free
-  </button>
-  {% endif %}
 
-  </div>
+<!-- jQuery CDN -->
 
-</div>
+<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+
+<!-- Bootstrap Js CDN -->
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 {% endblock %}
