Successfully implemented the delete article route

--- a/templates/closet.html
+++ b/templates/closet.html
@@ -49,7 +49,7 @@
     <a href="article_details/{{item.article_id}}"><img src="{{item.images[0].img_url}}" alt="Snow" style="width:100%"></a>
       {% endif %}
     <div class="article-detail">
-    <p class="text-center">{{item.type_value.name}} / {{item.size}}</p>
+    <p class="text-center">{{item.article_id}} {{item.type_value.name}} / {{item.size}}</p>
     </div>
     </div>
   </div>
