--- a/templates/base2.html
+++ b/templates/base2.html
@@ -18,6 +18,10 @@
 	<img class="login_logo" src="static/logo_white.png">
 </div>
 {% block content %} put your content here {% endblock %}
+<footer>
+<br>
+<p class="small_text"> Created with &hearts; by acruzer. <br>- 2018 - </p>
+</footer>
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 
 <!-- Bootstrap Js CDN -->
