--- a/static/thecluv.css
+++ b/static/thecluv.css
@@ -5,6 +5,12 @@ label.custom-radio .custom-control-input:checked{
     background-color: #f71735;
 }
 
+footer {
+    /*position: fixed;*/
+    bottom: 0;
+    width: 100%;
+}
+
 p{
     color: #011627;
     font-family: 'Open Sans', sans-serif;
@@ -18,6 +24,13 @@ a {
 a.small_link {  
     font-size: 12px;
     font-style: italic;
+}
+
+p.small_text {  
+    font-family: sans-serif;
+    font-size: 12px;
+    font-style: italic;
+    text-align: center;
 }
 
 a:hover {
