--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,10 @@
 
   {% block content %} put your content here {% endblock %}
 </div>
+<footer>
+<br>
+<p class="small_text"> Created with &hearts; by acruzer. <br>- 2018 - </p>
+</footer>
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 
 <!-- Bootstrap Js CDN -->
