--- a/templates/article_add.html
+++ b/templates/article_add.html
@@ -66,8 +66,7 @@
 		<textarea class="form-control"
 			   id="exampleFormControlTextarea1" 
 			   rows="3" 
-    		   name="notes">
-		</textarea>
+    		   name="notes"></textarea>
 	</div>
 
 
