--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,5 +15,13 @@
 {{user_info.zipcode}}
 </p>
 </div>
+    <form method="get" action="/profile_edit">
+    <button type="submit" 
+            id="edit_btn"
+            class="btn btn-primary mb-2" 
+            name="edit"
+            value="edit">Edit
+    </button>
+    </form>
 </div>
 {% endblock %}
